--- a/index.html
+++ b/index.html
@@ -50,8 +50,12 @@
                 </a>
                 <div class="ms-auto d-flex align-items-center">
                     <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Cancún, Quintana Roo, México</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@theidea.site</small>
-                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+52 998 890 8000</small>
+                    <a class="text-white" href="mailto:info@theidea.site">
+                        <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@theidea.site</small>
+                    </a>
+                    <a href="https://wa.link/0xm3uu" class="text-white" target="_blank">
+                        <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+52 998 890 8000</small>
+                    </a>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href=""><i class="bi bi-instagram"></i></a>
@@ -79,7 +83,8 @@
                     <div class="navbar-nav">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="#nosotros" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Servicios</a>
+                        <a href="#servicios" class="nav-item nav-link">Servicios</a>
+                        <!--
                         <a href="project.html" class="nav-item nav-link">Projects</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -91,10 +96,11 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        -->
+                        <a href="#contacto" class="nav-item nav-link">Contacto</a>
                     </div>
                     <div class="ms-auto d-none d-lg-block">
-                        <a href="" class="btn btn-primary rounded-pill py-2 px-3">Get A Quote</a>
+                        <a href="#cotizacion" class="btn btn-primary rounded-pill py-2 px-3">Cotizaciones</a>
                     </div>
                 </div>
             </nav>
@@ -114,8 +120,8 @@
                             <div class="row justify-content-start">
                                 <div class="col-lg-7 text-start">
                                     <p class="fs-4 text-white animated slideInRight">Bienvenido a <strong>The Idea Site</strong></p>
-                                    <h1 class="display-1 text-white mb-4 animated slideInRight">Libere el crecimiento de su empresa</h1>
-                                    <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight">Explore More</a>
+                                    <h1 class="display-1 text-white mb-4 animated slideInRight">Soluciones Corporativas</h1>
+                                    <a href="#servicios" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight">Ver Servicios</a>
                                 </div>
                             </div>
                         </div>
@@ -127,9 +133,9 @@
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-7 text-end">
-                                    <p class="fs-4 text-white animated slideInLeft">Welcome to <strong>GrowMark</strong></p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInLeft">Ready to Grow Your Business</h1>
-                                    <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore More</a>
+                                    <p class="fs-4 text-black animated slideInLeft">Con <strong>The Idea Site</strong></p>
+                                    <h1 class="display-1 text-black mb-5 animated slideInLeft">Libere el Crecimiento de su Empresa</h1>
+                                    <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Más info</a>
                                 </div>
                             </div>
                         </div>
@@ -160,8 +166,8 @@
                         <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-1.png" alt="Icon">
                         </div>
-                        <h5 class="mb-3">Award Winning</h5>
-                        <p class="mb-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam</p>
+                        <h5 class="mb-3">Orientados a Objetivos</h5>
+                        <p class="mb-0">Nos enorgullece ofrecer productos diseñados con objetivos claros y precisos, con el único propósito de ayudarlo a alcanzar sus metas de la manera más efectiva posible</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
@@ -169,8 +175,8 @@
                         <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-2.png" alt="Icon">
                         </div>
-                        <h5 class="mb-3">Professional Staff</h5>
-                        <p class="mb-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam</p>
+                        <h5 class="mb-3">Colaboradores Profesionales</h5>
+                        <p class="mb-0">Lo guiamos durante todo el proceso del servicio de forma profesional y humana.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
@@ -178,8 +184,8 @@
                         <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
                         </div>
-                        <h5 class="mb-3">Fair Prices</h5>
-                        <p class="mb-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam</p>
+                        <h5 class="mb-3">Precios Justos</h5>
+                        <p class="mb-0">Nuestros precios son los más competitivos del mercado actual, ofreciendo una excelente relación calidad-precio en todos nuestros servicios.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
@@ -187,8 +193,8 @@
                         <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-4.png" alt="Icon">
                         </div>
-                        <h5 class="mb-3">24/7 Support</h5>
-                        <p class="mb-0">Stet stet justo dolor sed duo. Ut clita sea sit ipsum diam</p>
+                        <h5 class="mb-3">Soporte Técnico</h5>
+                        <p class="mb-0">Nos encargamos de todas las tareas técnicas y de mantenimiento de nuestros servicios para que usted pueda centrarse plenamente en el crecimiento de su empresa.</p>
                     </div>
                 </div>
             </div>
@@ -211,9 +217,10 @@
                 </div>
                 <div class="col-lg-6 pt-lg-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="bg-white rounded-top p-5 mt-lg-5">
-                        <p class="fs-5 fw-medium text-primary">About Us</p>
-                        <h1 class="display-6 mb-4">The Best Marketing Agency to Improve Your Business</h1>
-                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo</p>
+                        <p class="fs-5 fw-medium text-primary">Nosotros</p>
+                        <h1 class="display-6 mb-4">La Mejor Opción Para Mejorar Su Empresa</h1>
+                        <p class="mb-4">En nuestra agencia, nos especializamos en ayudar a las empresas a alcanzar sus objetivos de ventas y satisfacción de los clientes a través de una amplia gama de servicios y estrategias digitales. <br> <br> Poniendo especial atención en el desarrollo de la marca personal de PYMES y autónomos. <br> <br> Nuestro principal enfoque es asegurarnos de que su empresa aproveche al máximo todas las herramientas disponibles en el mundo digital.</p>
+                        <!--
                         <div class="row g-5 pt-2 mb-5">
                             <div class="col-sm-6">
                                 <img class="img-fluid mb-4" src="img/icon/icon-5.png" alt="">
@@ -226,7 +233,8 @@
                                 <span>Clita erat ipsum et lorem et sit sed stet lorem</span>
                             </div>
                         </div>
-                        <a class="btn btn-primary rounded-pill py-3 px-5" href="about.html">Explore More</a>
+                    -->
+                        <a class="btn btn-primary rounded-pill py-3 px-5" href="about.html">Más Info</a>
                     </div>
                 </div>
             </div>
@@ -257,7 +265,7 @@
 
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <div id="servicios" class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                 <p class="fs-5 fw-medium text-primary">Our Services</p>
@@ -421,7 +429,7 @@
 
 
     <!-- Quote Start -->
-    <div class="container-xxl py-5">
+    <div id="cotizacion" class="container-xxl py-5">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -436,7 +444,7 @@
                         <span class="fs-5 fw-medium mx-4">+012 345 6789</span>
                     </a>
                 </div>
-                <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                <div id="contacto" class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <h2 class="mb-4">Get A Free Quote</h2>
                     <div class="row g-3">
                         <div class="col-sm-6">
